// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleIndex add Snapshot when hasPaths is false 1`] = `
ArticleIndex {
  "hasPaths": false,
  "indexFile": "bogus",
  "lines": Array [
    "2013-02-21-conference-comment-evaluer-la-qualite-dun-site-web-selon-les-techniques-dintegration-web-dactualite.md",
    "2012-11-22-why-would-i-not-use-my-own-framework-and-how-i-sell-usage-of-symfony2-and-other-current-php-5-3-goodies-to-my-client.md",
    "2012-10-27-my-first-introduction-to-the-hypermedia.md",
    "2007-06-26-une-boite-qui-traine.md",
    "2009-09-14-je-prefere-le-pingouin-design-cool-de-tee-shirt.md",
  ],
  "threeFirstAreNumbers": true,
}
`;

exports[`ArticleIndex add Snapshot when hasPaths is true 1`] = `
ArticleIndex {
  "hasPaths": true,
  "indexFile": "bogus",
  "lines": Array [
    "anything-here-goes/2013/02/21/conference-comment-evaluer-la-qualite-dun-site-web-selon-les-techniques-dintegration-web-dactualite",
    "anything-here-goes/2012/11/22/why-would-i-not-use-my-own-framework-and-how-i-sell-usage-of-symfony2-and-other-current-php-5-3-goodies-to-my-client",
    "anything-here-goes/2012/10/27/my-first-introduction-to-the-hypermedia",
    "anything-here-goes/2007/06/26/une-boite-qui-traine",
    "anything-here-goes/2009/09/14/je-prefere-le-pingouin-design-cool-de-tee-shirt",
  ],
  "threeFirstAreNumbers": false,
}
`;

exports[`ArticleIndex getLines Snapshot when hasPaths is false 1`] = `
Array [
  "2013-02-21-conference-comment-evaluer-la-qualite-dun-site-web-selon-les-techniques-dintegration-web-dactualite.md",
  "2012-11-22-why-would-i-not-use-my-own-framework-and-how-i-sell-usage-of-symfony2-and-other-current-php-5-3-goodies-to-my-client.md",
  "2012-10-27-my-first-introduction-to-the-hypermedia.md",
  "2007-06-26-une-boite-qui-traine.md",
  "2009-09-14-je-prefere-le-pingouin-design-cool-de-tee-shirt.md",
]
`;

exports[`getYears Happy-Path 1`] = `
Array [
  2007,
  2009,
  2012,
  2013,
]
`;

exports[`getYears Looping for findByDate(2007) 1`] = `
Array [
  "2007-06-26-une-boite-qui-traine.md",
]
`;

exports[`getYears Looping for findByDate(2009) 1`] = `
Array [
  "2009-09-14-je-prefere-le-pingouin-design-cool-de-tee-shirt.md",
]
`;

exports[`getYears Looping for findByDate(2012) 1`] = `
Array [
  "2012-11-22-why-would-i-not-use-my-own-framework-and-how-i-sell-usage-of-symfony2-and-other-current-php-5-3-goodies-to-my-client.md",
  "2012-10-27-my-first-introduction-to-the-hypermedia.md",
]
`;

exports[`getYears Looping for findByDate(2013) 1`] = `
Array [
  "2013-02-21-conference-comment-evaluer-la-qualite-dun-site-web-selon-les-techniques-dintegration-web-dactualite.md",
]
`;
